Fixes for responsible mobile design (#242) (#243)
- Ensure that buttons text don't overflow using `white-space: normal`
- Ensure that user-provided text (election/question title, description,
  answers..) use `word-break: break-word` css setting to break the words
  in two if required because overflowing.
- Ensure that the warning messages in the affix-bottom during ballot
  selection doesn't prevent the next button to show nor they take too
  much space, by adding `overflow-y: scroll` to that section.
- Ensure power-by doesn't take two lines

--- a/avBooth/accordion-option-directive/accordion-option-directive.less
+++ b/avBooth/accordion-option-directive/accordion-option-directive.less
@@ -24,6 +24,12 @@
   clear: both;
   overflow: hidden;
 
+  .answer-text,
+  .answer-category,
+  .answer-description {
+    word-break: break-all;
+  }
+
   .opt-data {
     display: block;
     float: left;
