--- a/avBooth/booth.less
+++ b/avBooth/booth.less
@@ -18,4 +18,6 @@
 /* Component LESS */
 /* Add Component LESS Above */
 
- 
+button {
+    white-space: normal !important;
+}
