--- a/avBooth/success-screen-directive/success-screen-directive.less
+++ b/avBooth/success-screen-directive/success-screen-directive.less
@@ -23,6 +23,11 @@
     display: block;
   }
 
+  .success-title,
+  .success-subheader {
+    word-break: break-all;
+  }
+
   .social-net-img {
       max-height: 48px;
       max-width: 150px;
